# software_renderer

./: CMakeLists.txt  README.md  README.txt  demo
include/: Body.h  Camera.h  Color.h  DepthBuffer.h  Matrix4.h  Mesh.h  Renderer.h  Scene.h  Vector3.h  grutil.h  looptime.h
src/: Body.cpp  Camera.cpp  Color.cpp  DepthBuffer.cpp  Matrix4.cpp  Mesh.cpp  README.md  Renderer.cpp  Scene.cpp  Vector3.cpp  grutil.cpp  looptime.c  looptime.cpp  main.cpp  main2.cpp
